--- a/layout/partners.html
+++ b/layout/partners.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221209234202">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221209234202">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221209234202">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221210135108">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221210135108">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221210135108">
 
 
 </head>
@@ -82,7 +82,33 @@
         <div class="menu__container">
             <ul class="menu__list">
                 <li class="menu__item"><a href="/" class="menu__link ">ГЛАВНАЯ</a></li>
-                <li class="menu__item"><a href="/about.html" class="menu__link ">О КОМПАНИИ</a></li>
+                <li class="menu__item">
+                    <a href="/about.html" class="menu__link ">О КОМПАНИИ</a>
+                    <div class="submenu">
+                        <ul class="submenu__list">
+                            <li class="submenu__item">
+                                <a href="#" class="submenu__link nav-item ">
+                                    Digital Trends
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="/marketing.html" class="submenu__link nav-item">
+                                    Digital Marketing Communication
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="/web.html" class="submenu__link nav-item">
+                                    Web Design & Web Development
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="#"  class="submenu__link nav-item">
+                                    GDPR – General Data Protection Regulation
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
                 <li class="menu__item"><a href="/products.html" class="menu__link ">ПРОДУКЦИЯ И УСЛУГИ</a></li>
                 <li class="menu__item"><a href="/projects.html" class="menu__link ">ПРОЕКТЫ</a></li>
                 <li class="menu__item"><a href="/news.html" class="menu__link ">НОВОСТИ</a></li>
@@ -413,17 +439,12 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221209234202"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221209234202"></script>
-
-
-<!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js?_v=20221209234202"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221209234202"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221209234202"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221209234202"></script>
-<script src="https://www.youtube.com/iframe_api?_v=20221209234202"></script>
-
-<script src="js/app.min.js?_v=20221209234202"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221210135108"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221210135108"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221210135108"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221210135108"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221210135108"></script>
+<script src="js/app.min.js?_v=20221210135108"></script>
 
 </body>
 
