--- a/src/site/templates/projects/partial/equipment__list.htm
+++ b/src/site/templates/projects/partial/equipment__list.htm
@@ -1,1 +1,17 @@
-<li>{{DESCRIPTION}}</li>
+<div class="more-products__grid-item product">
+                            <a href="{{LINK}}" class="product__image">
+                                <picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" alt="product"></picture>
+                            </a>
+                            <div class="product__desc">
+                                <a href="{{LINK}}" class="product__title">
+                                    Анкерно-поддерживающая группа СИП-1 и СИП-2
+                                </a>
+                                <div class="product__text">
+                                    Соответствует ГОСТ Р 51177; СТО 34.01-2.2-006-2015
+                                </div>
+                                <a href="{{LINK}}" class="product__link more-link">
+                                    Подробнее
+                                </a>
+                            </div>
+                        </div>
+                        
