--- a/src/site/templates/projects/project_equipment.htm
+++ b/src/site/templates/projects/project_equipment.htm
@@ -1,4 +1,10 @@
-<h2>{{TITLE}}</h2>
-                <ul class="nav">
-                    {{LIST}}
-                </ul>
+<!-- <section class="page__more-products more-products">
+                <div class="more-products__container">
+                    <h2 class="more-products__title title-md">
+                        {{TITLE}}
+                    </h2>
+                    <div class="more-products__grid">
+                        {{LIST}}
+                    </div>
+                </div>
+            </section> -->
