--- a/src/site/templates/projects/projects__detail.htm
+++ b/src/site/templates/projects/projects__detail.htm
@@ -1,18 +1,38 @@
-{{BREADCRUMBS}}
-
-<div class="holder">
-            <div id="project">
-                <h1>{{TITLE}}</h1>
-
-                <section class="blue inverted limited">
-                    <p>{{SHORTDESCRIPTION}}</p>
-                </section>
-
-                {{DESCRIPTIONHEADING}}
-                <div class="text">
-                    {{DESCRIPTION}}
+<section id="lottie" class="page__main main">
+                <div class="main__container">
+                    <div class="main__body main__body-md">
+                        {{BREADCRUMBS}}
+                    </div>
                 </div>
-
-				{{EQUIPMENTLIST}}
-            </div>
-        </div>
+                <canvas id="gradient-canvas" data-transition-in></canvas>
+            </section>
+            <section class="page__article article article-project">
+                <div class="article__container">
+                    <div class="article__body article__body-lg">
+                        <div class="article__image">
+                            <div class="article__image-wrapper">
+                                <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" class="cover-image" alt="{{ALT}}" title="{{ALT}}"></picture>
+                            </div>
+                        </div>
+                        <article class="article__content article__content-project">
+                            {{DATE}}
+                            <div>
+                                <h1>
+                                    {{TITLE}}
+                                </h1>
+                                <h3>
+                                    О проекте
+                                </h3>
+                                <p>
+                                    <mark>
+                                        {{SHORTDESCRIPTION}}
+                                    </mark>
+                                </p>
+                               {{DESCRIPTION}}
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+            {{EQUIPMENTLIST}}
+            
