--- a/src/site/templates/video/bl-video-main.htm
+++ b/src/site/templates/video/bl-video-main.htm
@@ -1,5 +1,17 @@
-<div id="bl-video" class="main holder">
-            <a href="#modal-video" class="js-modal-link" rel="nofollow" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}">
-                <span class="title">Посмотрите <br class="tm">видео о&nbsp;нас<br><span class="play">Смотреть</span></span>
-            </a>
-        </div>
+<section class="page__video video">
+                    <div class="video__container">
+                        <div class="video__body">
+                            <div class="video__main">
+                                <h2 class="video__title title-xl">
+                                    Видео о нас
+                                </h2>
+                                <div class="video__desc">
+                                    Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
+                                </div>
+                            </div>
+                            <button type="button" data-modal="modal" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" class="video__link icon-play">
+                                <picture><source srcset="/img/benefits/01.webp" type="image/webp"><img src="/img/benefits/01.jpg" class="cover-image" alt="video preview"></picture>
+                            </button>
+                        </div>
+                    </div>
+                </section>
