--- a/src/site/templates/video/bl-video-main.htm
+++ b/src/site/templates/video/bl-video-main.htm
@@ -9,9 +9,9 @@
                                     Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
                                 </div>
                             </div>
-                            <button type="button" data-modal="modal" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" class="video__link icon-play">
+                            <a href="" type="button" data-modal="modal" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" class="video__link icon-play">
                                 <picture><source srcset="/img/benefits/01.webp" type="image/webp"><img src="/img/benefits/01.jpg" class="cover-image" alt="video preview"></picture>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </section>
